test/lit/pto/tilebuf_invalid_32byte_align_rowmajor.pto
// RUN: not ptoas --pto-arch=a3 %s 2>&1 | FileCheck %s

// CHECK: error: tile_buf with blayout=row_major, slayout=none_box requires cols * elem_bytes to be 32-byte aligned

func.func @test_32byte_align_rowmajor() attributes {pto.kernel_kind = #pto.kernel_kind<vector>} {
  %tb = pto.alloc_tile : !pto.tile_buf<loc=vec, dtype=f16, rows=16, cols=15, v_row=16, v_col=15, blayout=row_major, slayout=none_box, fractal=512, pad=0>
  return
}